Add recipes to respective html files

--- a/Division-Bell.html
+++ b/Division-Bell.html
@@ -7,6 +7,16 @@
     <title>The Devision Bell</title>
 </head>
 <body>
-    
+    <h1>The Division-Bell</h1> <br>
+    <h2>Ingredients:</h2>
+    <ul>
+        <li>1oz Mezcal</li>
+        <li>3/4oz Aperol</li>
+        <li>1/4oz Maraschino Liqueur</li>
+        <li>3/4oz lime juice</li>
+        <li>Grapefruit twist garnish</li>
+    </ul> <br>
+    <h2>Recipe:</h2>
+    <p>Add all ingredients into a shaker with ice and shake until well-chilled. Strain into a chilled coupe glass. Express the oils from a grapefruit twist over the drink, then discard the twist.</p>
 </body>
 </html>
