--- a/Negroni.html
+++ b/Negroni.html
@@ -7,6 +7,15 @@
     <title>Negroni</title>
 </head>
 <body>
-    
+    <h1>The Negroni</h1> <br>
+    <h2>Ingredients:</h2>
+    <ul>
+        <li>1oz Beefeater Gin</li>
+        <li>1oz Rosso Vermouth</li>
+        <li>1oz Campari</li>
+        <li>1 Orange Peel</li>
+    </ul> <br>
+    <h2>Recipe:</h2>
+    <p>Into an old fashioned glass, Pour in your Campari, Vermouth, and Gin. Add large ice cube and stir for about 30 seconds. You'll know it's ready when you can feel condensation on the outside of the glass. Garnish with the Orange Peel by expressing the oils on the drink and dropping into the glass. Enjoy!</p>
 </body>
 </html>
