--- a/Paper-Plane.html
+++ b/Paper-Plane.html
@@ -7,6 +7,15 @@
     <title>Paper Plane</title>
 </head>
 <body>
-    
+    <h1>The Paper-Plane</h1> <br>
+    <h2>Ingredients:</h2>
+    <ul>
+        <li>3/4oz Bourbon</li>
+        <li>3/4oz Aperol</li>
+        <li>3/4oz Amaro Nonino</li>
+        <li>3/4oz Lemon Juice</li>
+    </ul> <br>
+    <h2>Recipe:</h2>
+    <p>Add the bourbon, Aperol, Amaro Nonino and lemon juice into a shaker with ice and shake until well-chilled. Strain into a coupe glass.</p> 
 </body>
 </html>
