--- a/Mahattan.html
+++ b/Mahattan.html
@@ -7,6 +7,15 @@
     <title>Manhattan</title>
 </head>
 <body>
-    
+    <h1>The Manhattan</h1> <br>
+    <h2>Ingredients:</h2>
+    <ul>
+        <li>2oz Templeton Rye Whiskey (4 year)</li>
+        <li>1oz Rosso Vermouth</li>
+        <li>3 Dashes Angostura Bitters</li>
+        <li>1 Maraschino Cherry</li>
+    </ul> <br>
+    <h2>Recipe:</h2>
+    <p>Into a mixing glass, dash three dashes of the Angostura Bitters. Pur in the ounce of vermouth and 2 ounces of whiskey. Add ice and stir for about 30 seconds. You'll know it's ready when you can feel condensation on the outside of the mixing glass. Strain into a coupe glass and garnish with the maraschino cherry.</p>
 </body>
 </html>
