--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <h1>Cocktail Recipes</h1>
 
-    <img src="images/Negroni.jpg" alt="Negroni Picture" width="120"> <br>
+    <img src="../images/Negroni.jpg" alt="Negroni Picture" width="120"> <br>
     <a href="Negroni.html">Negroni</a><br>
 
-    <img src="images/Manhattan.jpg" alt="Manhattan Picture" width="120"> <br>
+    <img src="../images/Manhattan.jpg" alt="Manhattan Picture" width="120"> <br>
     <a href="Mahattan.html">Manhattan</a><br>
 
     <img src="images/PaperPlane.jpg" alt="Paper-Plane Picture" width="120"> <br>
