correct img tag

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <img src="../images/Manhattan.jpg" alt="Manhattan Picture" width="120"> <br>
     <a href="Mahattan.html">Manhattan</a><br>
 
-    <img src="images/PaperPlane.jpg" alt="Paper-Plane Picture" width="120"> <br>
+    <img src="../images/PaperPlane.jpg" alt="Paper-Plane Picture" width="120"> <br>
     <a href="Paper-Plane.html">Paper Plane</a><br>
 
-    <img src="images/DivisionBell.jpg" alt="Division-Bell Picture" width="120"> <br>
+    <img src="../images/DivisionBell.jpg" alt="Division-Bell Picture" width="120"> <br>
     <a href="Division-Bell.html">The Division Bell</a><br>
 
 </body>
