--- a/Paper-Plane.html
+++ b/Paper-Plane.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paper Plane</title>
+    <link rel="stylesheet" href="style/style.css">
+
 </head>
 <body>
     <h1>The Paper-Plane</h1> <br>
+    <img src="images/PaperPlane.jpg" alt="Paper-Plane Picture" width="200"> <br>
+
     <h2>Ingredients:</h2>
     <ul>
         <li>3/4oz Bourbon</li>
