--- a/Mahattan.html
+++ b/Mahattan.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manhattan</title>
+    <link rel="stylesheet" href="style/style.css">
+
 </head>
 <body>
     <h1>The Manhattan</h1> <br>
+    <img src="images/Manhattan.jpg" alt="Manhattan Picture" width="200"> <br>
+
     <h2>Ingredients:</h2>
     <ul>
         <li>2oz Templeton Rye Whiskey (4 year)</li>
