--- a/Negroni.html
+++ b/Negroni.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Negroni</title>
+    <link rel="stylesheet" href="style/style.css">
+
 </head>
 <body>
     <h1>The Negroni</h1> <br>
+    <img src="images/Negroni.jpg" alt="Negroni Picture" width="200"> <br>
+
     <h2>Ingredients:</h2>
     <ul>
         <li>1oz Beefeater Gin</li>
