--- a/index.html
+++ b/index.html
@@ -9,18 +9,31 @@
 </head>
 <body>
     <h1>Cocktail Recipes</h1>
-    <div class="drinks">
-        <img src="images/Negroni.jpg" alt="Negroni Picture" width="120"> <br>
-        <a href="Negroni.html">Negroni</a><br>
-
-        <img src="images/Manhattan.jpg" alt="Manhattan Picture" width="120"> <br>
-        <a href="Mahattan.html">Manhattan</a><br>
-
-        <img src="images/PaperPlane.jpg" alt="Paper-Plane Picture" width="120"> <br>
-        <a href="Paper-Plane.html">Paper Plane</a><br>
-
-        <img src="images/DivisionBell.jpg" alt="Division-Bell Picture" width="120"> <br>
-        <a href="Division-Bell.html">The Division Bell</a><br>
+    <div class="drink-container">
+        <div class="drink">
+            <img src="images/Negroni.jpg" alt="Negroni Picture" width="120"> 
+            <a href="Negroni.html">Negroni</a><br>
+        </div>
+        <div class="drink">
+            <img src="images/Manhattan.jpg" alt="Manhattan Picture" width="120">
+            <a href="Mahattan.html">Manhattan</a><br>
+        </div>
+        <div class="drink">
+            <img src="images/PaperPlane.jpg" alt="Paper-Plane Picture" width="120">
+            <a href="Paper-Plane.html">Paper Plane</a><br>
+        </div>
+        <div class="drink">
+            <img src="images/DivisionBell.jpg" alt="Division-Bell Picture" width="120">
+            <a href="Division-Bell.html">The Division Bell</a><br>
+        </div>
+        <div class="drink">
+            <img src="images/boulevardier.jpg" alt="Boulevardier Picture" width="120">
+            <a href="Boulevardier.html">The Boulevardier</a><br>
+        </div>
+        <div class="drink">
+            <img src="images/DivisionBell.jpg" alt="Division-Bell Picture" width="120">
+            <a href="Division-Bell.html">The Division Bell 3</a><br>
+        </div>
     </div>    
 </body>
 </html>
