--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <a href="Boulevardier.html">The Boulevardier</a><br>
         </div>
         <div class="drink">
-            <img src="images/DivisionBell.jpg" alt="Division-Bell Picture" width="120">
-            <a href="Division-Bell.html">The Division Bell 3</a><br>
+            <img src="images/EspressoMartini.jpg" alt="Division-Bell Picture" width="120">
+            <a href="Espresso-Martini.html">Espresso Martini</a><br>
         </div>
     </div>    
 </body>
